# rustdash

./: Cargo.toml  Makefile  README.md  build.sh  check-structures.sh  launcher.sh  local.html
battery-notify/: battery-notify.service  battery-notify.sh  battery-notify.timer
src/: main.rs
