[package]
name = "webdash"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = "0.18"
webkit2gtk = { version = "2.0", features = ["v2_40"] }
gdk = "0.18"
glib = "0.18"
gio = "0.18"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
